--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Path
         run: pwd
 
+      - name: all files
+        run: ls -a
+
       - name: Converting index.adoc
         run: rm index.html && asciidoctor index.adoc
         
